rajout des tech, projet, correction orthographes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <title>Fullstack</title>
 </head>
-<body class="">
+<body class="darkMode">
     
     <div class="container">
         <div id="navigation">
@@ -72,7 +72,7 @@
                         <img src="./ressources/images/Photo2.png" alt="">
                     </div>
                     <h2><span>Khalil Medjahed</span></h2>
-                    <p>Je suis un dévellopeur web "Fullstack" junior.</p>
+                    <p>Je suis un développeur web "Fullstack" junior.</p>
                     <a href="./ressources/pages/cv.html" class="btn">Afficher le C.V</a>
                     <ul class="socialMedia">
                         <li><a href=""><i class="fab fa-github"></i></a></li>
@@ -90,15 +90,7 @@
                 </div>
                 <div class="content">
                     <div class="textBox">
-                        <p>J'ai toujours été un passioné de l'informatique et la programmation. Déja, dés l'age de 11 ans (1996) 
-                            je me suis mis à la programmation d'abord avec le langage QuickBasic, puis Visual basic pour arriver
-                            au C++ et au C Sharp en utilisant DirectX pour créer des jeux. 
-                            Ensuite durant ma carriére professionelle, j'ai mis en application toutes les connaissances aquises pour
-                            développer des outils qui me permettais de bien piloter mes différentes entreprises.
-                            Aujourd'hui j'ai fais de ma passion mon métier, j'ai suivie une formation intensive de 7 mois, au sein 
-                            de l'école Simplon à Marseille, qui m'a permis d'aquérrir les outils nécéssaire pour devenir un dévellopeur
-                            Web Fullstack.
-
+                        <p>J'ai toujours été un passionné de l'informatique et la programmation. Déja, dés l'âge de 11 ans (1996) je me suis mis à la programmation d'abord avec le langage QuickBasic, puis Visual basic pour arriver au C++ et au C Sharp en utilisant DirectX pour créer des jeux. Ensuite, durant ma carrière professionnelle, j'ai mis en application toutes les connaissances acquises pour développer des outils qui me permettaient de bien piloter mes différentes entreprises. Aujourd'hui j'ai fait de ma passion mon métier, j'ai suivi une formation intensive de 7 mois, au sein de l'école Simplon à Marseille, qui m'a permis d'acquérir les outils nécessaires pour devenir un développeur Web Fullstack.
                         </p>
                     </div>
                     <div class="imgBox">
@@ -110,30 +102,43 @@
             <section class="services" id="services">
                 <div class="titre">
                     <h2>Mes Compétences</h2>
-                    <p>Les principales compétences que je maitrise.</p>
+                    <p>Les principales technologies que je maitrise.</p>
                 </div>
                 <div class="content">
                     <div class="serviceBox">
+                        <img src="./ressources/images/React-icon.svg" alt="">
+                        <h2>React JS</h2>
+                        <p>Que ce soit en fonctions ou en classes, les hooks, le JSX, Redux ...etc. React Js est un puissant outil qui me permet d'avancer vite et de délivrer un résultat optimal, avec ou sans Typescript.</p>
+                    </div>
+                    <div class="serviceBox">
+                        <img src="./ressources/images/Vue-js.svg" alt="">
+                        <h2>Vue 3</h2>
+                        <p>En Compositions API ou Options API, Pinia ou Vuex, je prends toujours du plaisir à utiliser Vue Js, avec ou sans Typescript. Il m'est souvent arrivé de l'utiliser avec le puissant Primevue. </p>
+                    </div>
+                    <div class="serviceBox">
+                        <img src="./ressources/images/symfony.png" alt="">
+                        <h2>Symfony 5</h2>
+                        <p>Aprés avoir fais du PHP en MVC, et des requêtes SQL, j'ai découvert Symfony 5, il me permet de ne plus penser aux bases d'une application, mais de me concentrer sur la résolution des problèmes réels du projet.</p>
+                    </div>
+                    <div class="serviceBox">
                         <img src="./ressources/images/icon1.png" alt="">
                         <h2>HTML5 CSS3</h2>
-                        <p>Que ce soit le HTML ou le CSS3, je maitrise les bases pour faire un site Web statique ou dynamique.</p>
+                        <p>Que ce soit le HTML ou le CSS3, je les maitrise assez bien pour livrer un front respectable.</p>
                     </div>
                     <div class="serviceBox">
                         <img src="./ressources/images/icon2.png" alt="">
                         <h2>JAVASCRIPT</h2>
-                        <p>Les bases JS et les DOM sont bien maintrisés, ainsi que quelques API WEB tel que Canvas,IndexedDB ,Fetch API et 
-                            XMLHttpRequest "AJAX".</p>
+                        <p>Les bases JS, JQuery et le DOM sont bien maintrisées, ainsi que quelques API WEB tel que Canvas,IndexedDB ,Fetch, AJAX, Object, Promises, Proxy,Observers ...etc.</p>
                     </div>
                     <div class="serviceBox">
                         <img src="./ressources/images/icon3.png" alt="">
                         <h2>PHP</h2>
-                        <p>Je maitrise les bases de PHP et de ces fonctions prédéfinies, ainsi que le PDO et MYSQLI.</p>
+                        <p>Je maitrise assez bien PHP en procédurale ou en POO 'MVC', j'arrive à répondre à des problemes souvent assez complexes.</p>
                     </div>
                     <div class="serviceBox">
                         <img src="./ressources/images/icon4.png" alt="">
                         <h2>MYSQL</h2>
-                        <p>De la création d'une base de données selon la méthose Merise, ou que ce soit INSERT, SELECT ou 
-                            INNER JOIN, 
+                        <p>De la création d'une base de données selon la méthose Merise, ou que ce soit INSERT, SELECT, INNER JOIN, VIEWS....etc  
                             MySQL n'a plus aucun secrets pour moi.</p>
                     </div>
                     <div class="serviceBox">
@@ -168,6 +173,96 @@
                     </div>
                 </div>
                 <div class="content">
+                    <div class="slideBox" id="slide1">
+                        <div class="imgBox">
+                            <img src="./ressources/images/tetrix.png" alt="">
+                        </div>
+                        <div class="textBox">
+                            <h3>Médiathèque</h3>
+                            <p>Création d'une appli, pour la gestion des prêts d'article d'une médiathèque, avec une gestion d'utilisateurs, gestion des articles, et gestions des prêts et des retards avec des notifications, le tous en Vue 3, Vuex, Primevue, et PHP.</p>
+                            <div class="btnInterne">
+                                <button onclick="window.open('https://kalilovsky.github.io/tetrix/', '_blank');">
+                                    <i class="fas fa-search"></i>
+                                    Aperçu</button>
+                                <button onclick="window.open('https://github.com/kalilovsky/tetrix', '_blank');"><i class="fab fa-github"></i>Code Github</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slideBox" id="slide1">
+                        <div class="imgBox">
+                            <img src="./ressources/images/tetrix.png" alt="">
+                        </div>
+                        <div class="textBox">
+                            <h3>YourTube 'Vue'</h3>
+                            <p>C'est un mix en Youtube et Pinterest, on peut gérer les article "Video ou Image", les utilisateurs aussi, le tous en Vue Js 'Application non fini par manque de temps.'. </p>
+                            <div class="btnInterne">
+                                <button onclick="window.open('https://kalilovsky.github.io/tetrix/', '_blank');">
+                                    <i class="fas fa-search"></i>
+                                    Aperçu</button>
+                                <button onclick="window.open('https://github.com/kalilovsky/tetrix', '_blank');"><i class="fab fa-github"></i>Code Github</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slideBox" id="slide1">
+                        <div class="imgBox">
+                            <img src="./ressources/images/tetrix.png" alt="">
+                        </div>
+                        <div class="textBox">
+                            <h3>YourTube 'React Js'</h3>
+                            <p>C'est un mix en Youtube et Pinterest, on peut gérer les article "Video ou Image", les utilisateurs aussi, le tous en React Js.</p>
+                            <div class="btnInterne">
+                                <button onclick="window.open('https://kalilovsky.github.io/tetrix/', '_blank');">
+                                    <i class="fas fa-search"></i>
+                                    Aperçu</button>
+                                <button onclick="window.open('https://github.com/kalilovsky/tetrix', '_blank');"><i class="fab fa-github"></i>Code Github</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slideBox" id="slide1">
+                        <div class="imgBox">
+                            <img src="./ressources/images/tetrix.png" alt="">
+                        </div>
+                        <div class="textBox">
+                            <h3>Créateur de dialogue de BD</h3>
+                            <p>Une petite application qui permet de mettre des bulles de dialogue dans des images, y insérer des dialogues, les redimensionner et ensuite sauvegarder le rendu final. </p>
+                            <div class="btnInterne">
+                                <button onclick="window.open('https://kalilovsky.github.io/tetrix/', '_blank');">
+                                    <i class="fas fa-search"></i>
+                                    Aperçu</button>
+                                <button onclick="window.open('https://github.com/kalilovsky/tetrix', '_blank');"><i class="fab fa-github"></i>Code Github</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slideBox" id="slide1">
+                        <div class="imgBox">
+                            <img src="./ressources/images/tetrix.png" alt="">
+                        </div>
+                        <div class="textBox">
+                            <h3>Pokedex 'React Js'</h3>
+                            <p>Faire une multitude de requêtes vers une API, ensuite gérer la réponse pour afficher les carte Pokémon. On gére aussi la recherche en utlisant aussi des requêtes, la petite appli est faite en React Js 'CDN'. </p>
+                            <div class="btnInterne">
+                                <button onclick="window.open('https://kalilovsky.github.io/tetrix/', '_blank');">
+                                    <i class="fas fa-search"></i>
+                                    Aperçu</button>
+                                <button onclick="window.open('https://github.com/kalilovsky/tetrix', '_blank');"><i class="fab fa-github"></i>Code Github</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slideBox" id="slide1">
+                        <div class="imgBox">
+                            <img src="./ressources/images/tetrix.png" alt="">
+                        </div>
+                        <div class="textBox">
+                            <h3>Blog de Cuisine</h3>
+                            <p>Un blog réalisé en pure JS et PHP, back en MVC, il y a trois type d'utilisiteurs 'Normal, Autheur, Admin', il y a une gestion de commentaires 'approuver, supprimer ..etc', de messages, gestion des utilisateurs et bien sur des articles. </p>
+                            <div class="btnInterne">
+                                <button onclick="window.open('https://kalilovsky.github.io/tetrix/', '_blank');">
+                                    <i class="fas fa-search"></i>
+                                    Aperçu</button>
+                                <button onclick="window.open('https://github.com/kalilovsky/tetrix', '_blank');"><i class="fab fa-github"></i>Code Github</button>
+                            </div>
+                        </div>
+                    </div>
                     <div class="slideBox" id="slide1">
                         <div class="imgBox">
                             <img src="./ressources/images/tetrix.png" alt="">
